--- a/1.Formulários/index.html
+++ b/1.Formulários/index.html
@@ -22,6 +22,9 @@
         Hiddne: <input type="hidden"> <br>
         File: <input type="file" multiple> <br>
         Searcher: <input type="search"> <br>
+        <label for="">Mensagem:</label>
+        <textarea rows="10" cols="50" name="text" id=""></textarea> <br>
+
         <button type="submit">Enviar</button> <br>
     </form>
 </body>
