--- a/2.Estruturando seu HTML + Formatações/1.formatando-textos.html
+++ b/2.Estruturando seu HTML + Formatações/1.formatando-textos.html
@@ -6,7 +6,7 @@
     <title>Formatando Textos</title>
 </head>
 <body>
-    
+
    <i>Programe</i> <b>seu futuro global agora!</b> <br>
     20 <sup>o</sup> <sub>C</sub> <br>
     <blockquote>Citações</blockquote> <br>
@@ -14,5 +14,8 @@
     <em>Destaque em itálico com semântica e acessibilidade</em> <br> <br> 
     <font color="blue" face="Arial, Tahoma, 'Trebuchet MS' ">Fonte e seus atributos</font> <br>
    
+    <u>Texto sublinhado</u>
+
+    <mark>Texto marcado</mark>
 </body>
 </html>
