--- a/2.Estruturando seu HTML + Formatações/3.fieldSet.html
+++ b/2.Estruturando seu HTML + Formatações/3.fieldSet.html
@@ -7,7 +7,8 @@
 </head>
     <style>
         .row {
-            margin: 5px;        
+            margin: 5px; 
+            color: rgba(255, 0, 0, 0.5);       
         }
 
         label{
