--- a/4.Fundamentos do CSS/Introdução ao CSS/index.html
+++ b/4.Fundamentos do CSS/Introdução ao CSS/index.html
@@ -5,17 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trilha CSS</title>
 
-    <style>
-        h1 {            
-            background: blue; 
-            color: white;
-        }
+    <link rel="stylesheet" href="./assets/css/style.css">
 
-        h2 {
-            background: green;
-            color: white;
-        }
-    </style>
 </head>
 
 <body>
