--- a/5.Combinadores/3.combinador-filho.html
+++ b/5.Combinadores/3.combinador-filho.html
@@ -6,11 +6,20 @@
     <title>Combinador Filho</title>
 
     <style>
+        div > p {
+            color: lightgreen;
+        }
 
+        div > span > p {
+            color: red;
+        }
     </style>
 
 </head>
 <body>
+
+    <h1>Combinador Filho (>)</h1>
+
     <div>
         <p>Parágrafo 1 dentro da div</p>
         <p>Parágrafo 2 dentro da div</p>
