--- a/5.Estilizações Básicas com CSS/cores.html
+++ b/5.Estilizações Básicas com CSS/cores.html
@@ -19,7 +19,30 @@
             border: 2px solid currentColor;
         }
 
-        
+        #rgb {
+            color: rgb(255, 99, 180);
+        }
+
+        #rgba {
+            color: rgba(85, 125, 188, 0.5);
+        }
+
+        #hex {
+            color: #0000ff;
+        }
+
+        #hex-transparencia {
+            color: #0000ff80;
+        }
+
+        #hsl {
+            color: hsl(240, 100%, 50%);
+        }
+
+        #hsla {
+            color: hsla(240, 100%, 50%, 0.5);
+        }
+
     </style>
 </head>
 
