--- a/5.Estilizações Básicas com CSS/fundos-dos-elementos.html
+++ b/5.Estilizações Básicas com CSS/fundos-dos-elementos.html
@@ -11,10 +11,11 @@
             height: 200vh;
         }
         div {
+            height: 200vh;
             width: 300px;
             height: 300px;
             background-size: cover;
-            overflow: hidden;
+            overflow: auto;
             border: 5px solid black;
         }
 
@@ -31,6 +32,10 @@
 
         #background-attachment-scroll {
             background-attachment: scroll;
+        }
+
+        #background-attachment-local {
+            background-attachment: local;
         }
     </style>
 
@@ -56,6 +61,15 @@
         dolorum alias magni cum necessitatibus 
         perspiciatis, corporis, sunt fugit perferendis dignissimos. Sed.
         <img src="https://picsum.photos/200" alt="" id="background-attachment-scroll">
+    </div>
+
+    <code>background-attachment: local</code>
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Voluptatum saepe quos vero nihil error ex vel, in repellendus 
+        dolorum alias magni cum necessitatibus 
+        perspiciatis, corporis, sunt fugit perferendis dignissimos. Sed.
+        <img src="https://picsum.photos/200" alt="" id="background-attachment-local">
     </div>
     
     
