--- a/5.Estilizações Básicas com CSS/fundos-dos-elementos.html
+++ b/5.Estilizações Básicas com CSS/fundos-dos-elementos.html
@@ -17,25 +17,32 @@
             background-size: cover;
             overflow: auto;
             border: 5px solid black;
+            
         }
 
         img {
             width: 100%;
             height: 100%;   
             object-fit: cover;
-            object-position: left 50% top 50% bottom start 50% end 50% right 50%;         
+            object-position: left 50% top 50% bottom start 50% end 50% right 50%;     
         }
 
         #background-attachment-fixed {
             background-attachment: fixed;
+            background-origin: padding-box;
+            background-clip: padding-box;
         }
 
         #background-attachment-scroll {
             background-attachment: scroll;
+            background-origin: border-box;
+            background-clip: border-box;
         }
 
         #background-attachment-local {
             background-attachment: local;
+            background-origin: content-box;
+            background-clip: content-box;
         }
     </style>
 
