--- a/5.Estilizações Básicas com CSS/bordas-imagens.html
+++ b/5.Estilizações Básicas com CSS/bordas-imagens.html
@@ -24,7 +24,10 @@
     .exemplo2 {
         background-color: lightcoral;
         width: 200px;
-        height: 200px;    
+        height: 200px;   
+        border: 50px solid;
+        border-image-source: linear-gradient(45deg, red, blue);
+
     }
 
 
